--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,8 @@
     "magnific-popup": "^1.1.0",
     "jquery-ui": "*",
     "imagesloaded": "^4.1.3",
-    "bootstrap": "^4.0.0"
+    "bootstrap": "^4.0.0",
+    "popper.js": "^1.12.9"
   },
   "devDependencies": {},
   "overrides": {
