--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "gulp-wait": "^0.0.2"
+    "gulp-wait": "^0.0.2",
+    "axios": "^0.17.1",
+    "load-google-maps-api": "^1.0.1"
   },
   "config": {
     "strict-ssl": false
