--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "jquery-ui": "*",
     "imagesloaded": "^4.1.3",
     "bootstrap": "^4.0.0",
-    "popper.js": "^1.12.9"
+    "popper.js": "^1.12.9",
+    "typeahead.js": "^0.11.1"
   },
   "devDependencies": {},
   "overrides": {
