--- a/bower.json
+++ b/bower.json
@@ -2,19 +2,17 @@
   "name": "test",
   "private": true,
   "dependencies": {
-    "slick-carousel": "^1.7.1",
     "magnific-popup": "^1.1.0",
     "jquery-ui": "*",
     "imagesloaded": "^4.1.3",
     "bootstrap": "^4.0.0",
     "popper.js": "^1.12.9",
-    "typeahead.js": "^0.11.1"
+    "typeahead.js": "^0.11.1",
+    "slick-carousel": "^1.7.1",
+    "bootstrap-table": "^1.11.1"
   },
   "devDependencies": {},
   "overrides": {
-    "slick-carousel": {
-      "dependencies": {}
-    },
     "magnific-popup": {
       "dependencies": {}
     },
@@ -25,6 +23,9 @@
       "dependencies": {}
     },
     "bootstrap": {
+      "dependencies": {}
+    },
+    "slick-carousel": {
       "dependencies": {}
     }
   }
