update search animate

--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "popper.js": "^1.12.9",
     "typeahead.js": "^0.11.1",
     "slick-carousel": "^1.7.1",
-    "bootstrap-table": "^1.11.1"
+    "bootstrap-table": "^1.11.1",
+    "bootstrap-tagsinput": "^0.8.0",
+    "bootstrap-datepicker": "^1.7.1"
   },
   "devDependencies": {},
   "overrides": {
