--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "slick-carousel": "^1.7.1",
     "bootstrap-table": "^1.11.1",
     "bootstrap-tagsinput": "^0.8.0",
-    "bootstrap-datepicker": "^1.7.1"
+    "bootstrap-datepicker": "^1.7.1",
+    "jplist": "^5.2.0"
   },
   "devDependencies": {},
   "overrides": {
