--- a/package.json
+++ b/package.json
@@ -1,83 +1,84 @@
 {
-  "private": true,
-  "engines": {
-    "node": ">=4"
-},
-"devDependencies": {
-    "axios": "^0.17.1",
-    "babel-core": "^6.24.1",
-    "babel-loader": "7.1.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "browser-sync": "^2.18.12",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "css-loader": "^0.28.4",
-    "del": "^3.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "fastclick": "1.0.6",
-    "file-loader": "^1.1.5",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-data": "1.2.1",
-    "gulp-eslint": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-sass-glob": "1.0.8",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-twig": "0.7.0",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.2",
-    "gulp.spritesmith": "^6.5.0",
-    "html-webpack-plugin": "^2.30.1",
-    "import-glob-loader": "^1.1.0",
-    "main-bower-files": "^2.13.1",
-    "normalize-css": "^2.3.1",
-    "path": "0.12.7",
-    "run-sequence": "2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "twig-loader": "^0.3.1",
-    "webpack": "^3.4.1",
-    "webpack-fail-plugin": "^2.0.0",
-    "webpack-modernizr-loader": "^4.0.0",
-    "webpack-stream": "^4.0.0",
-    "wiredep": "^4.0.0"
-},
-"eslintConfig": {
-    "env": {
-      "es6": true,
-      "node": true,
-      "browser": true
-  },
-  "rules": {
-      "quotes": [
-        2,
-        "single"
-    ]
-  }
-},
-"dependencies": {
-    "jquery": "^3.3.1",
-    "jquery-ui": "*", 
-    "load-google-maps-api": "^1.0.1",
-    "babel-polyfill": "^6.26.0",
-    "imagesloaded": "^4.1.4",
-    "jquery-validation": "^1.17.0",
-    "modernizr": "^3.6.0",
-    "slick-carousel": "^1.8.1",
-    "bootstrap": "^3.3.7",
-    "bootstrap-table": "^1.11.1",
-    "tingle.js": "^0.12.0",
-    "malihu-custom-scrollbar-plugin": "^3.1.5"
-},
-"config": {
-    "strict-ssl": false
-}
+    "private": true,
+    "engines": {
+        "node": ">=4"
+    },
+    "devDependencies": {
+        "axios": "^0.17.1",
+        "babel-core": "^6.24.1",
+        "babel-loader": "7.1.1",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.24.1",
+        "browser-sync": "^2.18.12",
+        "browser-sync-webpack-plugin": "^1.2.0",
+        "css-loader": "^0.28.4",
+        "del": "^3.0.0",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "fastclick": "1.0.6",
+        "file-loader": "^1.1.5",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-babel": "^6.1.2",
+        "gulp-concat": "^2.6.1",
+        "gulp-cssnano": "^2.1.2",
+        "gulp-data": "1.2.1",
+        "gulp-eslint": "^4.0.0",
+        "gulp-if": "^2.0.2",
+        "gulp-load-plugins": "^1.5.0",
+        "gulp-notify": "3.0.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-rimraf": "^0.2.1",
+        "gulp-sass": "^3.1.0",
+        "gulp-sass-glob": "1.0.8",
+        "gulp-sourcemaps": "^2.6.0",
+        "gulp-twig": "0.7.0",
+        "gulp-uglify": "^3.0.0",
+        "gulp-useref": "^3.1.2",
+        "gulp.spritesmith": "^6.5.0",
+        "html-webpack-plugin": "^2.30.1",
+        "import-glob-loader": "^1.1.0",
+        "main-bower-files": "^2.13.1",
+        "normalize-css": "^2.3.1",
+        "path": "0.12.7",
+        "run-sequence": "2.1.0",
+        "sass-loader": "^6.0.6",
+        "style-loader": "^0.18.2",
+        "twig-loader": "^0.3.1",
+        "webpack": "^3.4.1",
+        "webpack-fail-plugin": "^2.0.0",
+        "webpack-modernizr-loader": "^4.0.0",
+        "webpack-stream": "^4.0.0",
+        "wiredep": "^4.0.0"
+    },
+    "eslintConfig": {
+        "env": {
+            "es6": true,
+            "node": true,
+            "browser": true
+        },
+        "rules": {
+            "quotes": [
+                2,
+                "single"
+            ]
+        }
+    },
+    "dependencies": {
+        "babel-polyfill": "^6.26.0",
+        "bootstrap": "^3.3.7",
+        "bootstrap-table": "^1.11.1",
+        "imagesloaded": "^4.1.4",
+        "jquery": "^3.3.1",
+        "jquery-ui": "*",
+        "jquery-validation": "^1.17.0",
+        "load-google-maps-api": "^1.0.1",
+        "magnific-popup": "^1.1.0",
+        "malihu-custom-scrollbar-plugin": "^3.1.5",
+        "modernizr": "^3.6.0",
+        "slick-carousel": "^1.8.1",
+        "tingle.js": "^0.12.0"
+    },
+    "config": {
+        "strict-ssl": false
+    }
 }
